@@ -9407,7 +9407,7 @@ part
      ;
 
      memory "calibration"
-         size            = 2;
+         size            = 1;
          read            = "0  0  1  1   1  0  0  0    0 0 0 x  x x x x",
                            "0  0  0  0   0  0  0  a0   o o o o  o o o o";
      ;
@@ -9588,7 +9588,7 @@ part
      ;
 
      memory "calibration"
-         size            = 2;
+         size            = 1;
          read            = "0  0  1  1   1  0  0  0    0 0 0 x  x x x x",
                            "0  0  0  0   0  0  0  a0   o o o o  o o o o";
      ;
@@ -9770,7 +9770,7 @@ part
      ;
 
      memory "calibration"
-         size            = 2;
+         size            = 1;
          read            = "0  0  1  1   1  0  0  0    0 0 0 x  x x x x",
                            "0  0  0  0   0  0  0  a0   o o o o  o o o o";
      ;
